--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Mono&display=swap" rel="stylesheet">
+    <title>my profile page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="navbar">
-      <a class="navbar-title" href="#"><h1>LUÍS QUILHÓ</h1></a>
-      <div class="nav-links" display="flex">
-        <a href="#">portfolio</a>
-        <a href="#">about</a>
-        <a href="#">contact</a>
+   <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
+      <a class="navbar-brand" href="#">LUÍS QUILHÓ</a>
+      <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">HOME<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">ABOUT</a>
+        </div>
+      </div>
+    </nav>
+
+    <div class="banner">
+      <h1>WEB DEVELOPER</h1>
+    </div>
+
+    <div class="my-container">
+      <h3 class="header">Welcome to my portfolio page!</h3>
+      <br>
+      <p class="body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, natus, quaerat. Voluptatum optio quos deleniti? Perferendis maiores nam a nostrum quis, magnam beatae, eligendi veritatis, maxime, doloribus facere sint temporibus!</p>
+      <br>
+      <div class="portfolio">
+
       </div>
     </div>
-    <div id="photos">
-      <img src="images/P4011831.jpg" alt="">
-      <img src="images/P4011837.jpg" alt="">
-      <img src="images/P4011840.jpg" alt="">
-      <img src="images/P4011842.jpg" alt="">
-      <img src="images/P4011844.jpg" alt="">
-      <img src="images/P4011845.jpg" alt="">
-      <img src="images/P4011831.jpg" alt="">
-      <img src="images/P4011837.jpg" alt="">
-      <img src="images/P4011840.jpg" alt="">
-      <img src="images/P4011842.jpg" alt="">
-      <img src="images/P4011844.jpg" alt="">
-      <img src="images/P4011845.jpg" alt="">
-
+    <div class="footer">
+      <div class="my-container">
+        <h3>My contacts</h3>
+        <br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, dolores, officiis. Dolores aut, consectetur blanditiis, molestiae culpa sunt tenetur reprehenderit esse, accusantium iste quo. Nisi dolorem asperiores eveniet dolorum delectus?</p>
+      </div>
     </div>
-    <script src="https://kit.fontawesome.com/c8dd5da627.js"></script>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
 
