new boilerplate for page

--- a/index.html
+++ b/index.html
@@ -1,52 +1,104 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>my profile page</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!DOCTYPE HTML>
+<!--
+	Alpha by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Luís Quilhó portfolio</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="landing is-preload">
+		<div id="page-wrapper">
 
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-   <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
-      <a class="navbar-brand" href="#">LUÍS QUILHÓ</a>
-      <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">HOME<span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">ABOUT</a>
-        </div>
-      </div>
-    </nav>
+			<!-- Header -->
+				<header id="header" class="alt">
+					<!-- <h1><a href="index.html">LUÍS QUILHÓ</a></h1> -->
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">About</a></li>
+						</ul>
+					</nav>
+				</header>
 
-    <div class="banner">
-      <h1>WEB DEVELOPER</h1>
-    </div>
+			<!-- Banner -->
+				<section id="banner">
+					<h2>Luís Quilhó</h2>
+          <ul class="actions special">
+            <li><a href="mailto:luis.quilho@gmail.com" class="button primary">Contact me</a></li>
+          </ul>
+				</section>
 
-    <div class="my-container">
-      <h3 class="header">Welcome to my portfolio page!</h3>
-      <br>
-      <p class="body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, natus, quaerat. Voluptatum optio quos deleniti? Perferendis maiores nam a nostrum quis, magnam beatae, eligendi veritatis, maxime, doloribus facere sint temporibus!</p>
-      <br>
-      <div class="portfolio">
+			<!-- Main -->
+				<section id="main" class="container">
 
-      </div>
-    </div>
-    <div class="footer">
-      <div class="my-container">
-        <h3>My contacts</h3>
-        <br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, dolores, officiis. Dolores aut, consectetur blanditiis, molestiae culpa sunt tenetur reprehenderit esse, accusantium iste quo. Nisi dolorem asperiores eveniet dolorum delectus?</p>
-      </div>
-    </div>
+					<section class="box special">
+						<header class="major">
+							<h2>Web Developer</h2>
+							<p>A showcase of some of my main projects. More to come soon!</p>
+						</header>
+					</section>
 
+					<div class="row">
+						<div class="col-6 col-12-narrower">
+							<section class="box special">
+								<span class="image featured">
+                  <a href="https://photoblog2.herokuapp.com/" target="_blank">
+                    <img src="images/photoblog.png" alt="" />
+                  </a>
+                </span>
+								<h3>My photography website</h3>
+								<p>A photography porfolio showcasing some of my pictures</p>
+								<ul class="actions special">
+									<li><a href="https://photoblog2.herokuapp.com/" target="_blank" class="button alt">Visit</a></li>
+								</ul>
+							</section>
+						</div>
 
+						<div class="col-6 col-12-narrower">
+							<section class="box special">
+								<span class="image featured">
+                  <a href="https://citymask.herokuapp.com/" target="_blank">
+                    <img src="images/citymakeover.png" alt="" />
+                  </a>
+                </span>
+								<h3>City Makeover</h3>
+								<p>An app that allows you to take care of your city</p>
+								<ul class="actions special">
+									<li><a href="https://citymask.herokuapp.com/" target="_blank" class="button alt">Visit</a></li>
+								</ul>
+							</section>
+						</div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+					</div>
+
+				</section>
+
+			<!-- Footer -->
+				<footer id="footer">
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/lu%C3%ADs-quilh%C3%B3-6230a5189/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://github.com/lquilho" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.instagram.com/luisquilho/?hl=en" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; All rights reserved.</li>
+					</ul>
+				</footer>
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
-
