minor changes on the colors

--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
 							</section>
 						</div>
 
+            <div class="col-6 col-12-narrower">
+              <section class="box special">
+                <span class="image featured">
+                  <a href="#">
+                    <img src="https://picsum.photos/id/1044/4032/2268" alt="" />
+                  </a>
+                </span>
+                <h3>One River</h3>
+                <p>Where to you want to paddle next? (coming soon...)</p>
+                <ul class="actions special">
+                  <li><a href="#" class="button alt">Visit</a></li>
+                </ul>
+              </section>
+            </div>
 					</div>
 
 				</section>
