changed button one river

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                   </a>
                 </span>
                 <h3>One River</h3>
-                <p>Where to you want to paddle next? (coming soon...)</p>
+                <p>Where to you want to paddle next?</p>
                 <ul class="actions special">
-                  <li><a href="#" class="button alt">Visit</a></li>
+                  <li><a href="#" class="button alt">(coming soon...)</a></li>
                 </ul>
               </section>
             </div>
